sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: ')' expected but integer literal found.
		if(i==0 || (plusPetit(i-1,i)) i+=1
                                                 ^